2008-07-15  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom/DomCecilType.cs,
	  MonoDevelop.Projects.Dom/DomCecilCompilationUnit.cs,
	  MonoDevelop.Projects.Parser/DefaultParserService.cs: Optimized
	  cecil loading.

2008-07-14  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectDom.cs: Added parserdatabase
	  update thread.

2008-07-14  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/AbstractParser.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Projects.Dom.Parser/IParser.cs,
	  MonoDevelop.Projects.Dom.Output/AmbienceService.cs,
	  MonoDevelop.Projects.Dom/PreProcessorDefine.cs,
	  MonoDevelop.Projects.Dom/IDocumentMetainformation.cs,
	  MonoDevelop.Projects.Dom/NamespaceEntry.cs,
	  MonoDevelop.Projects.Dom/FoldingRegion.cs,
	  MonoDevelop.Projects.Dom/ClassEntry.cs,
	  MonoDevelop.Projects.Dom/ConditionalRegion.cs: Added support for
	  comments/foldings (old) and pre processor defines/conditional
	  regions (new) to the new dom infrastructure.

2008-07-14  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom/ResolveResult.cs,
	  MonoDevelop.Projects.Dom/DomType.cs: Fixed inner types.

2008-07-13  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom/AbstractMember.cs,
	  MonoDevelop.Projects.Dom/ExpressionContext.cs,
	  MonoDevelop.Projects.Dom/IMember.cs: Worked on code completion.

2008-07-12  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/DomType.cs,
	  MonoDevelop.Projects.Dom/IType.cs: Some dom changes.

2008-07-11  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/DomType.cs,
	  MonoDevelop.Projects.Dom/DomMethod.cs,